@@ -1,1 +1,15 @@
 # cs59Project
+
+## Usage
+In order to run the javafx components, you must download the javaFX sdk 
+and include the appropriate modules
+
+### Link
+~~~
+https://gluonhq.com/products/javafx/
+~~~
+
+### Sample VM option
+~~~
+--module-path <Path-To-Your-JavaFx-SDK-Lib-Folder> --add-modules=javafx.controls,javafx.web 
+~~~
